# cy_platform

./: CMakeLists.txt
include/main/: coord_2d_int.h  monitor_brightness.h  network_speed.h  serial_port.h  turn_off_screen.h
include/main/win32/: draw_rect.h  get_front_window_position.h  get_front_window_prop.h  get_front_window_title.h  get_mouse_position.h  media_control.h  send_keyboard.h  utf8_to_wstring.h
src/: main.cpp  serial_main.cpp
src/win32/: media_control.cpp  send_keyboard.cpp  utf8_to_wstring.cpp
test/: CMakeLists.txt  test.cpp
